# PythonBasics

./: .replit  README.md  class.py  classmethod.py  cs50.py  dict_tuples.py  fille_handling.py  first.py  iterator_generator.py  list.py  pyproject.toml  regular_expressions.py  str.py
