[tool.poetry]
name = "repl-nix-pythonbasics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pythonbasics"}]

[tool.poetry.dependencies]
python = "^3.10"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
